# docs/swagger.yaml
@@ -1,10 +1,10 @@
 definitions:
-  main.ErrorResponse:
+  handlers.ErrorResponse:
     properties:
       message:
         type: string
     type: object
-  main.Task:
+  handlers.Task:
     properties:
       description:
         example: Milk, Bread, Cheese
@@ -38,12 +38,12 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/main.Task'
+              $ref: '#/definitions/handlers.Task'
             type: array
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/main.ErrorResponse'
+            $ref: '#/definitions/handlers.ErrorResponse'
       summary: Get all tasks
       tags:
       - tasks
@@ -57,22 +57,22 @@ paths:
         name: task
         required: true
         schema:
-          $ref: '#/definitions/main.Task'
+          $ref: '#/definitions/handlers.Task'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/main.Task'
+            $ref: '#/definitions/handlers.Task'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/main.ErrorResponse'
+            $ref: '#/definitions/handlers.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/main.ErrorResponse'
+            $ref: '#/definitions/handlers.ErrorResponse'
       summary: Create a new task
       tags:
       - tasks
@@ -97,15 +97,15 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/main.ErrorResponse'
+            $ref: '#/definitions/handlers.ErrorResponse'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/main.ErrorResponse'
+            $ref: '#/definitions/handlers.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/main.ErrorResponse'
+            $ref: '#/definitions/handlers.ErrorResponse'
       summary: Delete a task
       tags:
       - tasks
@@ -123,19 +123,19 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/main.Task'
+            $ref: '#/definitions/handlers.Task'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/main.ErrorResponse'
+            $ref: '#/definitions/handlers.ErrorResponse'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/main.ErrorResponse'
+            $ref: '#/definitions/handlers.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/main.ErrorResponse'
+            $ref: '#/definitions/handlers.ErrorResponse'
       summary: Get task details
       tags:
       - tasks
@@ -154,26 +154,26 @@ paths:
         name: task
         required: true
         schema:
-          $ref: '#/definitions/main.Task'
+          $ref: '#/definitions/handlers.Task'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/main.Task'
+            $ref: '#/definitions/handlers.Task'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/main.ErrorResponse'
+            $ref: '#/definitions/handlers.ErrorResponse'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/main.ErrorResponse'
+            $ref: '#/definitions/handlers.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/main.ErrorResponse'
+            $ref: '#/definitions/handlers.ErrorResponse'
       summary: Update a task
       tags:
       - tasks
